# cooperation

./: .gitignore  LICENSE  README-macos.md  README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/crates/agentflow-agents/: Cargo.toml
backend/crates/agentflow-agents/src/: executor.rs  lib.rs  pool.rs
backend/crates/agentflow-agents/src/models/: claude.rs  gemini.rs  mod.rs  openai.rs
backend/crates/agentflow-agents/src/native/: claude_code.rs  codex.rs  gemini_cli.rs  gemini_native.rs  mod.rs  openai_responses.rs  pty_broker.rs
backend/crates/agentflow-core/: Cargo.toml
backend/crates/agentflow-core/src/: error.rs  lib.rs  state_machine.rs
backend/crates/agentflow-core/src/graph/: edge.rs  mod.rs  node.rs  workflow.rs
backend/crates/agentflow-core/src/protocol/: messages.rs  mod.rs  ws.rs
backend/crates/agentflow-memory/: Cargo.toml
backend/crates/agentflow-memory/src/: context_pool.rs  global_store.rs  lib.rs  manager.rs
backend/crates/agentflow-server/: Cargo.toml
backend/crates/agentflow-server/src/: app_state.rs  attachments.rs  lib.rs  main.rs
backend/crates/agentflow-server/src/orchestration/: engine.rs  hitl.rs  mod.rs  scheduler.rs
backend/crates/agentflow-server/src/router/: http.rs  mod.rs  pty_ws.rs  websocket.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: Toolbar.tsx
frontend/src/components/canvas/: AgentFlowCanvas.tsx
frontend/src/components/canvas/nodes/: AgentNodeComponent.tsx  HitlNode.tsx  LeaderNode.tsx  WorkerNode.tsx
frontend/src/components/modals/: HitlModal.tsx
frontend/src/components/panels/: ActivityLog.tsx  ChatPanel.tsx  GlobalMemoryPanel.tsx  GroupChatPanel.tsx  NodeConfigPanel.tsx  NodeEditPanel.tsx  PtyTerminal.tsx
frontend/src/lib/: api.ts  eventRouter.ts  runtime.ts  types.ts  wsClient.ts
frontend/src/stores/: chatStore.ts  executionStore.ts  groupChatStore.ts  hitlStore.ts  memoryStore.ts  ptyStore.ts  workflowStore.ts  wsStore.ts
