[package]
name = "agentflow-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
agentflow-core = { path = "../agentflow-core" }
agentflow-memory = { path = "../agentflow-memory" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
portable-pty = "0.8"
