[package]
name = "agentflow-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
agentflow-core = { path = "../agentflow-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
